Updated html article tag to section tag

--- a/index.html
+++ b/index.html
@@ -30,16 +30,13 @@
   <main>
     <section class="hero">
       <h1>Take your Art to the Next Level</h1>
-      <article>
-        <p>With premium subscriptions, get everything you need to help build your presence and advance
-          your career!</p>
-        <a href="https://www.artstation.com/?sort_by=community"></a>
-      </article>
+      <p>With premium subscriptions, get everything you need to help build your presence and advance
+        your career!</p>
+      <a href="https://www.artstation.com/?sort_by=community"></a>
     </section>
+    <section class="gallery">
 
-    <article class="gallery">
-
-    </article>
+    </section>
   </main>
 
   <footer>
