fixed header font size issue

--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
   </header>
 
   <main>
-    <section class="hero">
+    <article class="hero">
       <h1>Take your Art to the Next Level</h1>
       <p>With premium subscriptions, get everything you need to help build your presence and advance
         your career!</p>
       <a href="https://www.artstation.com/?sort_by=community"></a>
-    </section>
-    <section class="gallery">
+    </article>
+    <article class="gallery">
 
-    </section>
+    </article>
   </main>
 
   <footer>
